tests/errors/compiler/dif_types_in_enum/bad_type_in_enum_1.c
enum Color : float
{
	red = 5,
	green,
	blue
};

int main()
{
	enum Color clr = Color::red;
	return 0;
}
